--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -13,12 +13,14 @@ body {
 .title {
   background: #e3f4ff;
   padding: 20px;
+  margin: 16px;
 }
 
 .content {
   background: #e3f4ff;
   padding: 40px;
   margin: 16px;
+  font-size: 30px;
 }
 
 .button-container {
