--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -25,9 +25,20 @@ body {
 
 .button-container {
   background: #e3f4ff;
+  margin: 16px;
+  text-align: center;
+  font-size: 30px;
+  padding: 60px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 20px;
+  width: 250px;
+  font-size: 26px;
+  display: block;
+  margin: 0 auto;
+  
+  
 }
